--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </select>
                     <input type="text" class="add__description" placeholder="Add description">
                     <input type="number" class="add__value" placeholder="Value">
-                    <button class="add__btn"><i class="ion-ios-plus-outline"></i></button>
+                    <button class="add__btn"><i class="ion-ios-plus-outline"></i>Add</button>
                 </div>
             </div>
 
