--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
@@ -47,7 +48,7 @@
                     </select>
                     <input type="text" class="add__description" placeholder="Add description">
                     <input type="number" class="add__value" placeholder="Value">
-                    <button class="add__btn"><i class="fa fa-arrow-circle-right" aria-hidden="true">Add</i></button>
+                    <button class="add__btn"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
                 </div>
             </div>
 
