--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </select>
                     <input type="text" class="add__description" placeholder="Add description">
                     <input type="number" class="add__value" placeholder="Value">
-                    <button class="add__btn"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
+                    <button class="add__btn">+</button>
                 </div>
             </div>
 
@@ -64,7 +64,7 @@
                             <div class="right clearfix">
                                 <div class="item__value">+ 2,100.00</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i>X</button>
                                 </div>
                             </div>
                         </div>
