--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="right clearfix">
                                 <div class="item__value">+ 2,100.00</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i>X</button>
+                                    <button class="item__delete--btn">X</button>
                                 </div>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                             <div class="right clearfix">
                                 <div class="item__value">+ 1,500.00</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete--btn">X</button>
                                 </div>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                                 <div class="item__value">- 900.00</div>
                                 <div class="item__percentage">21%</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete--btn">X</button>
                                 </div>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                                 <div class="item__value">- 435.28</div>
                                 <div class="item__percentage">10%</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete--btn">X</button>
                                 </div>
                             </div>
                         </div>
